# wav2vec-mos

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: gcp-push.yml
docs/: VERTEX.md
scripts/: infer.sh  train.sh
src/wav2vec_mos/: cli.py  infer.py  profiling.py  train.py  utils.py
